--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@prisma/client": "^4.14.0",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-slot": "^1.0.2",
+        "@react-three/fiber": "^8.13.5",
         "@t3-oss/env-nextjs": "^0.3.1",
         "@tanstack/react-query": "^4.29.7",
         "@trpc/client": "^10.26.0",
@@ -31,6 +32,7 @@
         "superjson": "1.12.2",
         "tailwind-merge": "^1.13.2",
         "tailwindcss-animate": "^1.0.6",
+        "three": "^0.154.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
@@ -39,6 +41,7 @@
         "@types/prettier": "^2.7.2",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
+        "@types/three": "^0.154.0",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
         "autoprefixer": "^10.4.14",
