--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@prisma/client": "^4.14.0",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-slot": "^1.0.2",
+        "@react-three/drei": "^9.78.2",
         "@react-three/fiber": "^8.13.5",
         "@t3-oss/env-nextjs": "^0.3.1",
         "@tanstack/react-query": "^4.29.7",
@@ -33,6 +34,7 @@
         "tailwind-merge": "^1.13.2",
         "tailwindcss-animate": "^1.0.6",
         "three": "^0.154.0",
+        "three.meshline": "^1.4.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
