--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "build": "next build",
         "dev": "next dev",
         "lint": "next lint",
-        "start": "next start"
+        "start": "next start",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "ts:check": "tsc --noEmit"
     },
     "dependencies": {
         "@radix-ui/react-dropdown-menu": "^2.0.5",
