--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,54 +1,55 @@
 name: CI
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches:
-            - main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            - name: Set Node.js 18.x
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-                  cache: "yarn"
+      - name: Set Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "yarn"
 
-            - name: Setup yarn
-              uses: borales/actions-yarn@v4
+      - name: Setup yarn
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: "install"
 
-            - name: Install dependencies
-              run: yarn install
+      - name: Run linter
+        run: |
+          yarn lint
+          yarn format:check
+        env:
+          SKIP_ENV_VALIDATION: true
 
-            - name: Run linter
-              run: |
-                  yarn lint
-                  yarn format:check
-              env:
-                  SKIP_ENV_VALIDATION: true
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    typecheck:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+      - name: Set Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "yarn"
 
-            - name: Set Node.js 18.x
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 18
-                  cache: "yarn"
+      - name: Setup yarn
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: "install"
 
-            - name: Setup yarn
-              uses: borales/actions-yarn@v4
+      - name: Install dependencies
+        run: yarn install
 
-            - name: Install dependencies
-              run: yarn install
-
-            - name: Run typecheck
-              run: yarn ts:check
+      - name: Run typecheck
+        run: yarn ts:check
